style.css
body {
    font-family: 'Raleway', sans-serif;
    display: flex;
    flex-direction: column;
    margin: 0;
}

.body > * {
    padding: 16px 128px;
}

header,
footer {
    background-color: #1f2937;
    display: flex;
    padding: 16px 128px;
    height: 36px;
}

.body {
    display: flex;
    flex-direction: column;
}

nav,
footer {
    font-size: 18px;
}

header {
    justify-content: space-between;
    align-items: center;
    position: sticky;
    top: 0px;
}

footer {
    color: #e5e7eb;
    justify-content: center;
    align-items: center;
    position: sticky;
    bottom: 0px;
}

footer p {
    text-align: center;
}

.logo {
    font-size: 24px;
    font-weight: bold;
    color: #f9faf8;
}

#brahms {
    position: relative;
    left: -4px;
}

span#two {
    font-size: 20px;
}

ul {
    list-style-type: none;
    display: flex;
    gap: 48px;
    padding: 0;
    margin: 0;
}

a {
    text-decoration: none;
    color: #e5e7eb;
}

.main-info {
    background-color: #1f2937;
    display: flex;
    margin: 0;
    color: #e5e7eb;
    font-size: 18px;
    align-items: center;
    justify-content: space-between;
    line-height: 1.5;
}

.main-info img {
    height: 400px;
    width: 300px;
    flex-shrink: 1;
    border-radius: 50%;
}

.heading {
    flex-shrink: 3;
    margin-right: 16px;
}

.heading h1 {
    font-size: 48px;
    font-weight: 900;
    color: #f9faf8;
    margin: 0;
}

.heading p:last-of-type {
    font-style: italic;
}

button {
    border: 2px solid #1f2937;
    background-color: #3882f6;
    border-radius: 6px;
    color: inherit;
    font-family: inherit;
    font-size: inherit;
    padding: 8px 16px;
    height: 50px;
}

button:hover {
    background-color: #2f6fd6;
    border-color: #3882f6;
    cursor: pointer;
}

.quote {
    background-color: #e5e7eb;
    display: flex;
    justify-content: center;
    align-items: center;
    color: #1f2937;
}

figure {
    display: flex;
    flex-direction: column;
    align-content: center;
}

blockquote {
    font-size: 36px;
    font-style: italic;
}

figcaption {
    align-self: flex-end;
    font-weight: 700;
}

.action {
    padding: 64px 128px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.action div {
    display: flex;
    background-color: #3882f6;
    color: #e5e7eb;
    padding: 24px 80px;
    border-radius: 8px;
    justify-content: space-between;
    align-items: center;
    flex: 1;
}

.action button {
    border-color: #e5e7eb;
}

.action span {
    font-weight: 700;
}

.info {
    padding: 64px 128px;
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 300px;
    width: auto;
}

.info h2 {
    color: #1f2937;
}

.frame {
    display: flex;
    justify-content: center;
    flex: 1;
}

.compositions {
    display: flex;
    justify-content: center;
    align-items: center;
}

.genre {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.genre img {
    border: 2px solid #bcbec2;
    border-radius: 6px;
    width: 100px;
    height: 100px;
    margin: 30px 30px 20px 30px;
}

.genre img:hover {
    border-width: 4px;
    cursor: pointer;
    margin: 28px 28px 18px 28px;
}

.action button:hover {
    border-color: #2558aa;
}

